# rust-graphql

./: .env  Cargo.toml  docker-compose.yaml
db/init/: init.sql
migrations/: 20240316044208_create_users_table.up.sql  20240316044403_create_photos_table.down.sql  20240316044403_create_photos_table.up.sql
src/: graphql.rs  main.rs
src/database/: connection.rs
src/entities/: country.rs  mod.rs  photo.rs  user.rs
src/graphql/: graphql_handler.rs  schema.rs
src/graphql/schema/: post_photo.rs  root.rs  total_photos.rs
src/schema/: all_photos.rs  mod.rs  post_photo.rs  query_root.rs  total_photos.rs
