[package]
edition = "2021"
name = "graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "7.0"
async-graphql-axum = "7.0"
axum = "0.7"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
