[package]
edition = "2021"
name = "graphql"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = {version = "7.0", features = ["tracing"]}
async-graphql-axum = "7.0"
axum = "0.7"
dotenv = "0.15"
rand = "0.8"
sqlx = {version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres"]}
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tower-http = {version = "0.5", features = ["trace"]}
tracing = {version = "0.1", features = ["attributes"]}
tracing-subscriber = {version = "0.3", features = ["env-filter", "json"]}
